added comments and structure skeleton

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dynamic JavaScript Quiz</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
     <body>
         <!-- header -->
@@ -12,16 +13,23 @@
             <div class="highscore" id="highscore">View high scores</div>
             <div class="counter" id="timer">Time: 0</div>
         </header>
-        <!-- main content to display quiz and results -->
-        <main class="page-content" id="page-content">
-            <section class="quiz" id="quiz">
+        <!-- Into do quiz -->
+        <div class="intro" id="intro">
+            start
+            <button>Start Quiz</button>
+        </div>
+        
+        <!-- quiz -->
+        <div class="start-quiz hidden" id="quiz">
+            Questions
+        </div>
 
-            </section>
-            <section class="answers" id="answers">
-                
-            </section>
+        <!-- results -->
+        <div class="results hidden" id="results">
+            Results
+        </div>
 
-        </main>
+
         <script src="/assets/js/script.js"></script>
     </body>
 </html>
