--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         </header>
         <!-- Into do quiz -->
         <div class="intro" id="intro">
-            start
-            <button>Start Quiz</button>
+            <h1>JavaScript Quiz</h1>
+            <p>Get ready to test your JavaScript knowledge with this quiz! You have 60 seconds to answer 6 questions. Every question you get wrong will deduct 10 seconds from your time and your score. Good Luck!</p>
+            <button id="start-btn" class="btn">Start Quiz</button>
         </div>
         
         <!-- quiz -->
