can submit single score to local storage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- header -->
         <header class="header">
             <div class="highscore" id="highscore">View High Scores</div>
-            <div class="counter" id="timer">Time: 90</div>
+            <div class="counter" id="timer">Time: 60 Seconds</div>
         </header>
         <!-- Into do quiz -->
         <div class="intro container" id="intro">
@@ -39,7 +39,7 @@
             <form class="score-form" di="upload-score">
                 <label for="score">Your Name</label>
                 <input type="text" id="name">
-                <button type="button" class="submitBtn">Submit Your Score</button>
+                <button type="button" id="submitBtn">Submit Your Score</button>
             </form>
         </div>
 
