added some styles

--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
         <!-- quiz -->
         <div class="start-quiz container hidden" id="quiz">
             <h3 id="questions">Questions</h3>
-            <ul id="answers">
-                <li class="answerChoice">A. </li>
-                <li class="answerChoice">B. </li>
-                <li class="answerChoice">C. </li>
-                <li class="answerChoice">D. </li>
-            </ul>
+            <ul id="answers"></ul>
             <p class="feedback"></p>
         </div>
 
