--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             </form>
         </div>
 
+        <!-- High Scores -->
+        
+
 
         <script src="./assets/js/script.js"></script>
     </body>
