added high scores

--- a/topscore.html
+++ b/topscore.html
@@ -10,7 +10,7 @@
      <!-- High Scores -->
      <div class="topScore container" id="topScore">
         <h2>Top Scores!</h2>
-        <ol id="topScores"></ol>
+        <ol id="userScores"></ol>
         <button type="button" id="restartBtn">Restart the Quiz</button>
     </div>
 
